myteo/test/parser/ast/block/unclosed_block.exp
ERROR: test/parser/ast/block/unclosed_block.myte:1:12 Unexpected <EOF>
 1 | fun main() {
   |             ^